remove steps from deps target

--- a/infrastructure/docker/builder/Dockerfile
+++ b/infrastructure/docker/builder/Dockerfile
@@ -9,7 +9,7 @@ RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@$GO_CI_LINT_V
 ARG GO_EXHAUSTSTRUCT_VERSION="v3.3.1"
 RUN go install github.com/GaijinEntertainment/go-exhaustruct/v3/cmd/exhaustruct@$GO_EXHAUSTSTRUCT_VERSION
 
-RUN apt update && apt install --auto-remove npm ca-certificates tzdata libgit2-dev protobuf-compiler  -y
+RUN apt update && apt install --auto-remove npm ca-certificates tzdata libgit2-dev libsqlite3-dev protobuf-compiler  -y
 RUN npm install -g pnpm@8.9.2
 
 WORKDIR /
