--- a/infrastructure/docker/git-ssh/Makefile
+++ b/infrastructure/docker/git-ssh/Makefile
@@ -19,7 +19,7 @@ include ../../../Makefile.variables
 IMAGENAME?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/git-ssh:${IMAGE_TAG}
 
 build:
-	earthly +build --DOCKER_REGISTRY_URI=$(DOCKER_REGISTRY_URI) --IMAGE_TAG=$(IMAGE_TAG)
+	docker build -t $(IMAGENAME) .
 
 build-pr: build publish
 	echo "Building on pull request"
@@ -37,7 +37,7 @@ cleanup-main:
 
 release:
 	echo "Releasing $(IMAGENAME)"
-	earthly --no-output --push +publish --DOCKER_REGISTRY_URI=$(DOCKER_REGISTRY_URI) --IMAGE_TAG=$(IMAGE_TAG)
+	docker push $(IMAGENAME)
 
 publish: release
 	echo $(IMAGE_TAG)
