--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -26,7 +26,7 @@ jobs:
           version: '>= 363.0.0'
       - name: gcloud authorize
         run: |
-          gcloud auth configure-docker
+          gcloud auth configure-docker europe-docker.pkg.dev
       - run: mkdir -p artifacts/
       - name: Plan execution pull request
         if: inputs.trigger == 'pull-request'
