--- a/infrastructure/docker/builder/Buildfile.yaml
+++ b/infrastructure/docker/builder/Buildfile.yaml
@@ -1,5 +1,5 @@
 metadata:
     registry: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult
 spec:
-  stage: Product
+  stage: BuildImages
   version: "1"
