--- a/infrastructure/docker/builder/Dockerfile
+++ b/infrastructure/docker/builder/Dockerfile
@@ -1,13 +1,24 @@
-FROM golang:1.24.2-alpine3.21 as golang
-FROM docker:28.0.2-cli-alpine3.21
+FROM bufbuild/buf:1.26.1 as buf
+FROM golang:1.24.2-alpine3.21
+# FROM docker:28.0.2-dind-alpine3.21
 
-COPY --from=golang /usr/local/go/ /usr/local/go/
-ENV PATH /usr/local/go/bin:$PATH
-RUN apk add --no-cache go protoc make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
+COPY --from=buf /usr/local/bin/buf /usr/local/bin/buf
+# COPY --from=golang /usr/local/go/ /usr/local/go/
+# ENV PATH /root/go/bin:/usr/local/go/bin:$PATH
 
-RUN npm install -g pnpm@8.5.1
-RUN wget https://github.com/bufbuild/buf/releases/download/v1.23.1/buf-Linux-x86_64 -O /usr/local/bin/buf && chmod +x /usr/local/bin/buf
-RUN echo 'b1f3484cfc092bc14e1f886ff2116a98562bf29df0be2130bbaac128eca0b628  /usr/local/bin/buf' | sha256sum -c
+RUN apk add --no-cache ca-certificates tzdata alpine-sdk go make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
+COPY ./services/manifest-repo-export-service/install-libgit2.sh /tmp/install-libgit2.sh
+RUN /tmp/install-libgit2.sh && rm /tmp/install-libgit2.sh
 
-RUN wget https://github.com/earthly/earthly/releases/download/v0.8.4/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly
-RUN echo '1090e7b9fb65c0b9d3ce680dad2430dff2e0919a56f98de27156c3b9aa65f43d  /usr/local/bin/earthly' | sha256sum -c
+RUN npm install -g pnpm@8.9.2
+
+ARG GO_CI_LINT_VERSION="v1.64.0"
+RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@$GO_CI_LINT_VERSION
+ARG GO_EXHAUSTSTRUCT_VERSION="v3.3.1"
+RUN go install github.com/GaijinEntertainment/go-exhaustruct/v3/cmd/exhaustruct@$GO_EXHAUSTSTRUCT_VERSION
+
+# TODO: Uncomment this later once earthly has been completely removed (Ref: SRX-ELW2PF)
+# WORKDIR /tmp/kp/
+# COPY go.mod go.sum ./
+# RUN go mod download
+# WORKDIR /
