--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -52,13 +52,15 @@ jobs:
         run: |
           echo "stage_a=$(cat artifacts/github-convertor.json | jq '.stage_a.steps' -c)" >> $GITHUB_OUTPUT
           echo "stage_b=$(cat artifacts/github-convertor.json | jq '.stage_b.steps' -c)" >> $GITHUB_OUTPUT
-          echo "stage_a=$(cat artifacts/github-convertor.json | jq '.stage_a.steps' -c)"
-          echo "stage_b=$(cat artifacts/github-convertor.json | jq '.stage_b.steps' -c)"
+          echo "stage_a=$(cat artifacts/github-convertor.json | jq '.stage_a.steps' -c)" > stage.a.tmp.json
+          echo "stage_b=$(cat artifacts/github-convertor.json | jq '.stage_b.steps' -c)" > stage.b.tmp.json
       - uses: actions/upload-artifact@v4
         name: Upload execution plan
         with:
-          name: execution-plan.json
+          name: execution-plan.zip
           path: |
+            artifacts/stage.a.tmp.json
+            artifacts/stage.b.tmp.json
             artifacts/execution-plan.json
             artifacts/github-convertor.json
     outputs:
