--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -63,8 +63,13 @@ jobs:
             artifacts/stage.b.tmp.json
             artifacts/execution-plan.json
             artifacts/github-convertor.json
+      - name: Split up plan into individual parts
+        id: testingabc
+        run: |
+          echo "A: ${{ steps.splitplan.outputs.stage_a }} "
+          echo "B: ${{ steps.splitplan.outputs.stage_b }} "
     outputs:
-      stage_a: '[]'
+      stage_a: ${{ steps.splitplan.outputs.stage_a }}
       stage_b: ${{ steps.splitplan.outputs.stage_b }}
   stageA_build:
     needs: [execution_plan]
