--- a/infrastructure/docker/postgres/Makefile
+++ b/infrastructure/docker/postgres/Makefile
@@ -16,33 +16,5 @@
 
 include ../../../Makefile.variables
 
-IMAGENAME?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/git-ssh:${IMAGE_TAG}
-
-build:
-	docker build -t $(IMAGENAME) .
-
-build-pr: build publish
-	echo "Building on pull request"
-
-build-main: build publish
-	echo "Building on main"
-
-.PHONY: cleanup-pr
-cleanup-pr:
-	echo "Nothing to clean"
-
-.PHONY: cleanup-main
-cleanup-main:
-	echo "Nothing to clean"
-
-release:
-	echo "Releasing $(IMAGENAME)"
-	docker push $(IMAGENAME)
-
-publish: release
-	echo $(IMAGE_TAG)
-	echo $(IMAGENAME)
-
-.PHONY: get-builder-image
-get-builder-image:
-	@echo "$(KUBERPULT_BUILDER)"
+docker:
+	docker build -t postgres:local --build-arg POSTGRES_VERSION=13.15 .
