use pre-built builder image in ci

--- a/infrastructure/docker/deps/Makefile
+++ b/infrastructure/docker/deps/Makefile
@@ -18,5 +18,7 @@ include ../../../Makefile.variables
 
 .PHONY: build
 build:
+ifeq ($(IMAGE_TAG),latest)
 	make -C ../../.. builder
+endif
 	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(DEPS_IMAGE)
