fix(earthly): remove earthly for pkg
Ref: SRX-XQY8JM

--- a/infrastructure/docker/deps/Makefile
+++ b/infrastructure/docker/deps/Makefile
@@ -21,4 +21,4 @@ build:
 ifeq ($(IMAGE_TAG),latest)
 	make -C ../../.. builder
 endif
-	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(DEPS_IMAGE)
+	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE)
