--- a/Makefile.variables
+++ b/Makefile.variables
@@ -20,7 +20,8 @@ KUBERPULT_BUILDER?=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberp
 DOCKER_REGISTRY_URI?=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult
 SERVICE_IMAGES:=kuberpult-cd-service kuberpult-rollout-service kuberpult-frontend-service kuberpult-manifest-repo-export-service kuberpult-cloudrun-service kuberpult-reposerver-service
 IMAGE_TAG?=latest
-DEPS_IMAGE?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:latest
+BUILDER_IMAGE?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:$(IMAGE_TAG)
+DEPS_IMAGE?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/deps:$(IMAGE_TAG)
 CLI_IMAGE:=kuberpult-client
 GO_TEST_ARGS ?=
 export GO_TEST_ARGS
