--- a/charts/kuberpult/templates/manifest-repo-export-service.yaml
+++ b/charts/kuberpult/templates/manifest-repo-export-service.yaml
@@ -237,6 +237,9 @@ spec:
           value: "{{ .Values.git.minimizeExportedData }}"
         - name: KUBERPULT_CHECK_CUSTOM_MIGRATIONS
           value: "{{ .Values.db.checkCustomMigrations }}"
+{{- if .Values.db.gitTimestampMigrations.enabled and not .Values.reposerver.enabled }}
+{{ fail "If gitTimestampMigrations is enabled the reposerver should also be enabled" }}
+{{- end }}
         - name: KUBERPULT_GIT_TIMESTAMP_MIGRATIONS_ENABLED
           value: "{{ .Values.db.gitTimestampMigrations.enabled }}"
         volumeMounts:
