--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -132,6 +132,15 @@ jobs:
         uses: ./.github/actions/post-build-action
         with:
           data: ${{ toJSON(matrix.data) }}
+      - name: TESTING
+        run: |
+          echo "are there artifacts?"
+          echo "pwd:"
+          pwd
+          echo "ls -l"
+          ls -l
+          echo "ls -l ${{ matrix.data.artifacts }}"
+          ls -l ${{ matrix.data.artifacts }}
       - uses: actions/upload-artifact@v4
         if: matrix.data.artifacts != ''
         with:
