--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -144,6 +144,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: matrix.data.artifacts != ''
         with:
+          if-no-files-found: error
           name: ${{ matrix.data.artifactName }}
           path: |
             ${{ matrix.data.artifacts }}
