--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -132,7 +132,7 @@ jobs:
         uses: ./.github/actions/post-build-action
         with:
           data: ${{ toJSON(matrix.data) }}
-      - name: TESTING
+      - name: TESTING stage a
         run: |
           echo "are there artifacts?"
           echo "pwd:"
@@ -218,9 +218,19 @@ jobs:
         uses: ./.github/actions/post-build-action
         with:
           data: ${{ toJSON(matrix.data) }}
+      - name: TESTING stage b
+        run: |
+          echo "are there artifacts?"
+          echo "pwd:"
+          pwd
+          echo "ls -l"
+          ls -l
+          echo "ls -l ${{ matrix.data.artifacts }}"
+          ls -l ${{ matrix.data.artifacts }}
       - uses: actions/upload-artifact@v4
         if: matrix.data.artifacts != ''
         with:
+          if-no-files-found: error
           name: ${{ matrix.data.artifactName }}
           path: |
             ${{ matrix.data.artifacts }}
