make yaml paths relative

--- a/pkg/Buildfile.yaml
+++ b/pkg/Buildfile.yaml
@@ -1,10 +1,4 @@
----
-apiVersion: v1beta1
-kind: Service
-metadata:
-  name: pkg
-  version: v1
 spec:
   buildWith: infrastructure/docker/builder
 additional_artifacts:
-  - coverage.html
+  - ./coverage.html
