--- a/infrastructure/docker/builder/Buildfile.yaml
+++ b/infrastructure/docker/builder/Buildfile.yaml
@@ -2,3 +2,5 @@ metadata:
   registry: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult
 spec:
   version: "1"
+  dependsOn:
+    - ../../
