--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -182,6 +182,9 @@ db:
   # You should only enable this flag, if you want to do a one-step upgrade of kuberpult from a (relatively old) version that still uses git as storage.
   # If you are already using the database, ignore this flag.
   checkCustomMigrations: false
+  # This option migrates all the timestamps in the git repo to the databases
+  gitTimestampMigrations:
+    enabled: false
 manifestRepoExport:
   enabled: true
   image: kuberpult-manifest-repo-export-service
