feat: add replicas option for reposerver
Ref: SRX-RHBDV1

--- a/charts/kuberpult/templates/reposerver-service.yaml
+++ b/charts/kuberpult/templates/reposerver-service.yaml
@@ -34,7 +34,7 @@ metadata:
     tags.datadoghq.com/env: {{ .Values.datadogTracing.environment }}
 {{- end }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.reposerver.replicas | quote }}
   selector:
     matchLabels:
       app: kuberpult-reposerver-service
