--- a/charts/kuberpult/Makefile
+++ b/charts/kuberpult/Makefile
@@ -60,6 +60,7 @@ endif
 test-helm: $(TGZ_FILE) Chart.yaml
 	IMAGE_TAG=$(IMAGE_TAG) make -C ../../infrastructure/docker/builder build
 	docker run --rm -w /kp -v "$(MAKEFILE_DIR)$(TGZ_FILE):/kp/$(TGZ_FILE)" -v "$(MAKEFILE_DIR)Chart.yaml:/kp/Chart.yaml" -v "$(MAKEFILE_DIR)values.yaml:/kp/values.yaml" -v "$(MAKEFILE_DIR)templates:/kp/templates" -v "$(MAKEFILE_DIR)tests:/kp/tests" $(BUILDER_IMAGE) sh -c "helm lint $(TGZ_FILE) --set git.url=test --set ingress.domainName=kuberpult.example.com && helm dependency build &&  cd tests &&  go mod init test-helm && go mod tidy &&  go test ./..."
+	rm $(MAKEFILE_DIR)tests/go.mod $(MAKEFILE_DIR)tests/go.sum
 
 test: ct-test test-helm
 
