--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -17,7 +17,6 @@
 # NOTE: this will be replaced with the etf-golang makefile
 ROOT_DIR=..
 MAKEFLAGS += --no-builtin-rules
-export CGO_ENABLED=1
 GO := go
 GO_FILES := $(shell find . -type f -name '*.go')
 GO_SERVER_GEN := server-gen.go
@@ -30,13 +29,13 @@ test: unit-test
 gen: grpc-api-gen publicapi
 
 grpc-api-gen: api/v1/api.EnvironmentConfig_grpc.pb.go
-api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto buf.yaml buf.gen.yaml buf.lock
+api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto buf.yaml buf.gen.yaml buf.lock deps
 	if grep -q '^import "google/api/annotations.proto"' $< || grep -q '^import "google/api/http.proto"' $< ; then echo 'Instead of using google.api.http protobuf annotations we write HTTP handlers by hand' ; exit 1 ; fi
-	buf generate
+	docker run -w /kp/pkg --rm -v "./api/v1:/kp/pkg/api/v1" $(DEPS_IMAGE) sh -c "buf generate"
 
 publicapi: publicapi/$(GO_SERVER_GEN)
 publicapi/$(GO_SERVER_GEN): publicapi/api.yaml
-	go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml
+	docker run -w /kp/pkg --rm -v "./publicapi:/kp/pkg/publicapi" $(DEPS_IMAGE) sh -c 'go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml'
 
 release: #no-op
 clean:
@@ -46,6 +45,5 @@ proto: api/v1/api_grpc.pb.go publicapi
 
 build-pr: all
 build-main: all
-build-all: all
 
 .PHONY: all clean release test
