--- a/infrastructure/docker/deps/Makefile
+++ b/infrastructure/docker/deps/Makefile
@@ -19,4 +19,4 @@ include ../../../Makefile.variables
 .PHONY: build
 build:
 	make -C ../../.. builder
-	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(DEPS_IMAGE)
+	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE)
