fix(cli): use amd64 in the cli (#2447)

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -18,6 +18,7 @@ ROOT_DIR=..
 CGO_ENABLED=0
 MAIN_PATH=cmd/kuberpult-client
 SERVICE=client
+GOARCH=amd64
 MIN_COVERAGE=67.1
 
 include ../infrastructure/make/go/include.mk
