feat: use deployment frontenloading in release train
This makes use of the "frontloading" of the DeployApplicationVersion transformer
introduced in #2438

This means that data is now loaded earlier in the release train,
rather than letting the deployment transformer load it again.

This required some changes in the release train prognosis.

Ref: SRX-MQKPEG

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     image: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/kuberpult-cd-service:local
     environment:
       - KUBERPULT_EXPERIMENTAL_PARALLELISM_ONE_TRANSACTION=true
+      - KUBERPULT_MAX_NUMBER_OF_THREADS=10
       - KUBERPULT_LOCK_TYPE=db
       - LOG_LEVEL=INFO
       - KUBERPULT_DISABLE_QUEUE=true
