--- a/services/manifest-repo-export-service/Makefile
+++ b/services/manifest-repo-export-service/Makefile
@@ -14,101 +14,15 @@
 
 # Copyright freiheit.com
 
-# NOTE: this will be replaced with the etf-golang makefile
-
-include ../../Makefile.variables
-
+MIN_COVERAGE=45.4
 MAKEFLAGS += --no-builtin-rules
 
-export CGO_ENABLED=1
-IMAGE_REGISTRY?=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult
-IMAGENAME?=$(IMAGE_REGISTRY)/kuberpult-manifest-repo-export-service:$(VERSION)
-ARTIFACT_REGISTRY_IMAGE_NAME=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/kuberpult-manifest-repo-export-service:${VERSION}
+include ../../infrastructure/make/go/include.mk
 
+test: unit-test
 
-ifeq ($(WITH_DOCKER),)
-COMPILE_WITH_DOCKER := false
-else
-COMPILE_WITH_DOCKER := true
-endif
+build-pr: IMAGE_TAG=pr-$(VERSION)
+build-pr: lint unit-test bench-test docker release
 
-GO := go
-
-GO_FILES := $(shell find . -type f -name '*.go')
-PKG_GO_FILES := $(shell find ../../pkg/ -type f -name '*.go')
-ALL_GO_FILES := $(GO_FILES) $(PKG_GO_FILES)
-
-ifeq ($(patsubst %$(VERSION),,$(IMAGENAME)),)
-else
-$(error "$(IMAGENAME) doesn't end with $(VERSION). Please set the correct version.")
-endif
-
-SERVICE_NAME := $(shell basename $$PWD)
-EARTHLY := earthly
-
-image-name:
-	@echo "$(IMAGENAME)"
-
-version:
-	@echo "$(VERSION)"
-
-proto:
-	make -C../../pkg/api all
-
-bin/:
-	mkdir -p bin
-
-build: bin/main
-
-build-pr:
-	echo "build on pull request"
-	$(EARTHLY) -P --push +build-pr --registry=$(IMAGE_REGISTRY) --tag=pr-$(VERSION) --mirror=$(ARTIFACT_REGISTRY_MIRROR)
-
-build-main:
-	echo "build on main"
-	$(EARTHLY) -P --push +build-main --registry=$(IMAGE_REGISTRY) --tag=main-$(VERSION) --mirror=$(ARTIFACT_REGISTRY_MIRROR)
-
-.PHONY: cleanup-pr
-cleanup-pr:
-	echo "Nothing to clean"
-
-.PHONY: cleanup-main
-cleanup-main:
-	echo "Nothing to clean"
-
-bin/main: bin/ $(ALL_GO_FILES) | proto
-	@echo "building without docker, just plain go"
-	$(GO) build -o bin/main ./cmd/server/
-
-clean:
-	rm -rf pkg/api/api.gen.go
-	rm -rf bin
-	docker rmi $(IMAGENAME) || true
-
-.PHONY: test-dependancies
-test-dependancies:
-	make -C ../../pkg test
-	make -C ../../pkg/api test
-
-test:
-	$(EARTHLY) -P +unit-test "--GO_TEST_ARGS=$(GO_TEST_ARGS)"
-
-docker:
-	$(EARTHLY) +docker --registry=$(IMAGE_REGISTRY) --tag=$(VERSION)
-
-all: test docker
-
-.PHONY: publish
-publish: release
-
-.PHONY: all release test docker clean
-
-.PHONY: get-builder-image
-get-builder-image:
-	@echo "$(KUBERPULT_BUILDER)"
-
-kind-load: docker
-	kind load docker-image "$(IMAGENAME)"
-
-patch-kind: kind-load
-	kubectl set image deployment/kuberpult-manifest-repo-export-service service=$(IMAGENAME)
+build-main: IMAGE_TAG=main-$(VERSION)
+build-main: lint unit-test bench-test docker release
